<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_screen">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/loginText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_image" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/pin"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_retagle_with10"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawableEnd="@drawable/baseline_visibility_off_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/pin"
                    android:importantForAccessibility="yes"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginText" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/conform_pin"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_retagle_with10"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawableEnd="@drawable/baseline_visibility_off_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/conform_pin"
                    android:importantForAccessibility="yes"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pin" />

                <Button
                    android:id="@+id/buttonSignUp"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/signUp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/conform_pin" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
